@@ -7,4 +7,5 @@ usr/share/apport/testsuite/
 usr/share/doc/apport
 usr/share/locale
 usr/share/icons
+usr/share/apport/package-hooks
 ../local/ubuntu-bug usr/bin
